--- a/client/src/components/pages/Welcome/Welcome.css
+++ b/client/src/components/pages/Welcome/Welcome.css
@@ -1,9 +1,10 @@
-.main-text
+/* .main-text
 {
     position: absolute;
     top: 50px;
     width: 96.66666666666666%;
     color: #FFF;
+    margin-top: 30px;
 }
 .btn-min-block
 {
@@ -21,4 +22,18 @@
 {
     color: #000;
     background-color: #FFF;
-}
+} */
+
+
+
+.jumbotron{
+	background-image: url('./handyImage9.jpeg');
+	background-size: cover;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    width: 100%;
+    height:80vh;
+    min-height: 70%;
+    text-align: center;
+    
+}; 
