--- a/client/src/components/pages/Welcome/Welcome.css
+++ b/client/src/components/pages/Welcome/Welcome.css
@@ -1,10 +1,12 @@
 .jumbotron
 {
-    background-image: url("./handyImage9.jpeg");
-    height:600px;
+    background-image: url("./helpImage11.jpg");
+    height:650px;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 0px;
   };
+
 
   .main-text
 {
