--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,9 @@
 html {
-  height: 100%
+  min-height: 100%
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   overflow-y: scroll;
   box-shadow: none;
 }
