--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,20 @@
 html {
-  min-height: 100%
+  min-height: 100%;
+  height: 0px;
 }
 
 body {
   min-height: 100%;
   overflow-y: scroll;
   box-shadow: none;
+  display: flex;
+  flex-direction: column;
+}
+
+#root {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .btn-primary {
