--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,7 @@ body {
   border-color: black!important;
   box-shadow: none!important;
 }
+button {
+  background-color: #cc2f32;
+  border-color: black;
+}
