--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,6 +17,13 @@ body {
   flex-direction: column;
 }
 
+.filler {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0px
+}
+
 .btn-primary {
   background-color: #FF3B3F;
   border-color: rgb(100, 100, 100);
