--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -17,3 +17,10 @@
 .headercolor {
   background-color: white;
 }
+
+@media (max-width: 575.98px) {
+  #title {
+    font-size: 1.2rem;
+    margin-top: 7px;
+  }
+}
