--- a/client/src/components/pages/Main/pages/Home/Home.css
+++ b/client/src/components/pages/Main/pages/Home/Home.css
@@ -40,9 +40,14 @@ a {
 .address {
     font-size: 16px;
     padding-top: 10px;
+}
 
 .searchJobsBtn {
     padding-top: 10px;
     position: relative;
     right: 15px
+}
+
+.job-section {
+    background: #EFEFEF;
 }
